--- a/index.html
+++ b/index.html
@@ -4,61 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Myke Cameron - Software Engineer</title>
-    <style>
-      body {
-        font-family: "Arial", sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: #f4f4f4;
-      }
 
-      header {
-        background-color: #333;
-        color: #fff;
-        text-align: center;
-        padding: 0.5em 0;
-      }
-
-      header h1 {
-        color: #f4f4f4;
-      }
-
-      header h2 {
-        font-style: italic;
-      }
-      
-      section {
-        max-width: 800px;
-        margin: 20px auto;
-        padding: 20px;
-        background-color: #fff;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      }
-
-      ul {
-        list-style: none;
-        padding: 0;
-      }
-
-      .picture img {
-        width: 100%;
-      }
-
-      @media (max-width: 600px) {
-        section {
-          padding: 10px;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
-      <h1>Myke Cameron</h1>
-      <h2>Just some guy.</h2>
+      <div class="picture">
+        <img src="me.jpg">
+      </div>
+      <div>
+        <h1>
+          Myke Cameron
+        </h1>
+        <h2>
+          Software Engineer and Technical Leader
+        </h2>
+        <p>
+          Hi! 👋 I'm a software engineer with 15 years experience building products and teams in health care and ecommerce.
+        </p>
+        <p>
+          I have deep expertise in building scalable, maintainable, and error free software in Ruby and Ruby on Rails, and
+          a passion for developing and delivering solutions that delight users, colleagues, customers, and patients. 
+        </p>
+        <p>
+          For over a decade I've been leveraging agile processes and scrum to help teams deliver real, observable results to users.
+        </p>
+        <p>
+          I'm looking for my next challenge! If you have an opportunity you think I might be excited about, please don't 
+          hesitate to reach out! 
+        </p>
+        <p>
+          <a href="mailto:mykecameron@gmail.com">mykecameron@gmail.com</a>
+          <br/>
+          <a href="tel:7745730274">(774) 573-0274</a>
+        </p>
+      </div>
     </header>
-
-    <section class="picture">
-      <img src="./me.jpg" alt="A picture of Myke Cameron" />
-    </section>
   </body>
 </html>
