--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="picture">
         <img src="me.jpg">
       </div>
-      <div>
+      <div class="bio">
         <h1>
           Myke Cameron
         </h1>
