--- a/index.html
+++ b/index.html
@@ -8,37 +8,37 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
+    <div class="wrapper">
       <div class="picture">
         <img src="me.jpg">
       </div>
       <div class="bio">
-        <h1>
+        <h1 class="block">
           Myke Cameron
         </h1>
-        <h2>
+        <h2 class="block">
           Software Engineer and Technical Leader
         </h2>
-        <p>
+        <p class="block">
           Hi! 👋 I'm a software engineer with 15 years experience building products and teams in health care and ecommerce.
         </p>
-        <p>
+        <p class="block">
           I have deep expertise in building scalable, maintainable, and error free software in Ruby and Ruby on Rails, and
           a passion for developing and delivering solutions that delight users, colleagues, customers, and patients. 
         </p>
-        <p>
+        <p class="block">
           For over a decade I've been leveraging agile processes and scrum to help teams deliver real, observable results to users.
         </p>
-        <p>
+        <p class="block">
           I'm looking for my next challenge! If you have an opportunity you think I might be excited about, please don't 
           hesitate to reach out! 
         </p>
-        <p>
+        <p class="block">
           <a href="mailto:mykecameron@gmail.com">mykecameron@gmail.com</a>
           <br/>
           <a href="tel:7745730274">(774) 573-0274</a>
         </p>
       </div>
-    </header>
+    </div>
   </body>
 </html>
