--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="wrapper">
       <div class="picture">
-        <img src="me.jpg">
+        <img src="me.jpg" alt="Photograph of Myke Cameron at Keukenhof">
       </div>
       <div class="bio">
         <h1 class="block">
