add trailing slash

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="wrapper">
       <div class="picture">
-        <img src="me.jpg" alt="Photograph of Myke Cameron at Keukenhof">
+        <img src="me.jpg" alt="Photograph of Myke Cameron at Keukenhof" />
       </div>
       <div class="bio">
         <h1 class="block">
@@ -35,7 +35,7 @@
         </p>
         <p class="block">
           <a href="mailto:mykecameron@gmail.com">mykecameron@gmail.com</a>
-          <br/>
+          <br />
           <a href="tel:7745730274">(774) 573-0274</a>
         </p>
       </div>
