add linked in and github links

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
           <br />
           <a href="tel:7745730274">(774) 573-0274</a>
         </p>
+        <p class="links">
+          <a href="https://github.com/mykecameron"><img src="github.png" alt="github logo" /></a> <a href="https://linkedin.com/in/mykecameron"><img src="linkedin.png" alt="LinkedIn logo" /></a>
+        </p>
       </div>
     </div>
   </body>
