--- a/index.html
+++ b/index.html
@@ -20,18 +20,15 @@
           Software Engineer and Technical Leader
         </h2>
         <p>
-          Hi! 👋 I am a software engineer and technical leader with over 15 years of experience in health care and 
-          ecommerce.
+          Hi! 👋 I am a Software Engineer and Technical leader with over 15 years of experience building products, teams, and processes in health tech and ecommerce startups.
         </p>
         <p>
-          I leverage my deep experience in building scalable, maintainable, well tested, and error free software in Ruby, 
-          Rails, Typescript, Javascript, React, and Ember to develop and deliver solutions that delight users and 
-          business stakeholders.
+          I leverage my deep experience in building scalable, maintainable, and error free software using tools like Ruby on Rails, React, EmberJS, PostgreSQL, GraphQL, and OpenSearch, to deliver solutions that delight stakeholders, users, colleagues, customers, and patients.
         </p>
         <p>
-          I push my teams to higher levels of agility and faster delivery by applying hard earned lessons from over a 
-          decade of process leadership in Scrum and Kanban teams. 
-          
+          I push my teams to higher levels of agility and faster delivery by applying hard earned lessons from over a decade of process leadership and experience with Scrum. 
+        </p>
+        <p>
           I relish the opportunity to share my experience through mentorship.
         </p>
         <p>
